updating RestAPI
Adding some bugfixes
and more