@@ -7,24 +7,22 @@ import io.netty.buffer.ByteBuf;
 import io.netty.channel.ChannelHandlerContext;
 import io.netty.handler.codec.ByteToMessageDecoder;
 import lombok.var;
-
 import java.util.List;
 
-public class PacketDecoder extends ByteToMessageDecoder  {
+public class PacketDecoder extends ByteToMessageDecoder {
     @Override
     protected void decode(ChannelHandlerContext channelHandlerContext, ByteBuf byteBuf, List<Object> list) throws Exception {
-
-
         try {
             int id = byteBuf.readInt();
-            var packetClass = NettyDriver.getInstance().packetDriver.getPacket(id);
-            if(packetClass != null) {
-                Packet packet = packetClass.newInstance();
+            var packetClass = NettyDriver.getInstance().getPacketDriver().getPacket(id);
+            if (packetClass != null) {
+                Packet packet = packetClass.getDeclaredConstructor().newInstance();
+                packet.setPacketUUID(id); // Setze die UUID manuell
                 packet.readPacket(new NettyBuffer(byteBuf));
                 list.add(packet);
-                NettyDriver.getInstance().packetDriver.handle(id, channelHandlerContext.channel(), packet);
+                NettyDriver.getInstance().getPacketDriver().handle(id,  channelHandlerContext.channel(), packet);
             }
-        }catch (Exception ignored){
+        } catch (Exception ignored) {
             ignored.printStackTrace();
         }
     }
